Name:                   ngx-cache-purge
Version:                0.0.1
Author:                 Piotr Bogdan <ppbogdan@gmail.com>
Maintainer:             Piotr Bogdan <ppbogdan@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Purges nginx caches.
Description:            Watches nginx cache directories, keeps an index of
                        keys, and regex purges items from a redis queue 
Category:               Web
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  Default-Extensions:   OverloadedStrings
                      , NoImplicitPrelude
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Cache.Content
                      , Cache.Purge
                      , CachePurge
                      , Data.ByteString.Extra
  Other-Modules:        Cache.Registry
                      , Data.Set.Extra
                      , JobQueue
                      , Notify
                      , Text.Regex.Extra
                      , ThreadPool
  Build-Depends:        async
                      , attoparsec
                      , base >= 4 && < 5
                      , bytestring
                      , containers >= 0.5.5.1
                      , directory >= 1.2.1.0
                      , filemanip
                      , filepath
                      , hashable
                      , hedis
                      , hinotify >= 0.3.9
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl >= 2.2.1
                      , pcre-light
                      , protolude-lifted >= 0.1.0.0 && < 0.2.0.0
                      , regex-applicative
                      , stm
                      , stringsearch
                      , text >= 1.2.0.5
                      , unordered-containers

Executable ncp
  Default-Language:     Haskell2010
  Default-Extensions:   OverloadedStrings
                      , NoImplicitPrelude
  Ghc-Options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  HS-Source-Dirs:       app
  Main-Is:              Main.hs
  Build-Depends:        attoparsec
                      , base >= 4 && < 5
                      , ekg
                      , monad-logger
                      , ngx-cache-purge
                      , protolude-lifted
                                            
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Default-Extensions:   OverloadedStrings
                      , NoImplicitPrelude
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:         Cache.ContentSpec
                       , PurgeSpec
  Build-Depends:        hspec
                      , hspec-attoparsec
                      , quickcheck-instances
                      , QuickCheck
                      , base >= 4 && < 5
                      , bytestring
                      , stringsearch
                      , pcre-light
                      , directory
                      , mtl
                      , free
                      , exceptions
                      , attoparsec
                      , containers
                      , unordered-containers
                      , lens
                      , ngx-cache-purge
                      , protolude-lifted

Benchmark bench
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      bench
  Main-Is:             Main.hs
  Ghc-Options:         -Wall
  Build-Depends:       base
                     , attoparsec
                     , bytestring
                     , criterion
                     , ngx-cache-purge
                     , protolude-lifted
  Default-Language:    Haskell2010
  Default-Extensions:  OverloadedStrings
                     , NoImplicitPrelude

Source-Repository head
  Type:               git
  Location:           https://github.com/pbogdan/ngx-cache-purge/
