name: ngx-cache-purge
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: Piotr Bogdan <ppbogdan@gmail.com>
synopsis: Purges nginx caches.
description:
    Watches nginx cache directories, keeps an index of
    keys, and regex purges items from a redis queue
category: Web
author: Piotr Bogdan <ppbogdan@gmail.com>
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/pbogdan/ngx-cache-purge/

library
    exposed-modules:
        Cache.Content
        Cache.Header
        Cache.Purge
        NgxCachePurge
        Data.ByteString.Extra
    build-depends:
        async >=2.1.1 && <2.2,
        attoparsec >=0.13.1.0 && <0.14,
        base ==4.*,
        binary >= 0.8.3.0 && <0.9,
        bytestring >=0.10.8.1 && <0.11,
        containers >=0.5.5.1 && <0.6,
        directory >=1.2 && <1.4,
        filemanip >=0.3.6.3 && <0.4,
        filepath >=1.4.1.0 && <1.5,
        hashable >=1.2.4.0 && <1.3,
        hedis >=0.9.5 && <0.10,
        hinotify >=0.3.9 && <0.4,
        lens ==4.15.*,
        monad-control >=1.0.1.0 && <1.1,
        monad-logger >=0.3.20.1 && <0.4,
        mtl >=2.2.1 && <2.3,
        pcre-light >=0.4.0.4 && <0.5,
        protolude-lifted >=0.1.0.0 && <0.2.0.0,
        regex-applicative >=0.3.3 && <0.4,
        stm >=2.4.4.1 && <2.5,
        stringsearch >=0.3.6.6 && <0.4,
        text >=1.2.0.5 && <1.3,
        unordered-containers >=0.2.7.1 && <0.3,
        time >= 1.6.0.1 && < 1.7.0,
        base64-bytestring >= 1.0.0.1 && < 1.1
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    other-modules:
        Cache.Registry
        Cache.Registry.Mutable
        Data.Set.Extra
        JobQueue
        Notify
        Text.Regex.Extra
        ThreadPool
    ghc-options: -Wall

executable ncp
    main-is: Main.hs
    build-depends:
        attoparsec >=0.13.1.0 && <0.14,
        base ==4.*,
        ekg >=0.4.0.11 && <0.5,
        monad-logger >=0.3.20.1 && <0.4,
        ngx-cache-purge >=0.0.1 && <0.1,
        protolude-lifted >=0.1.0.0 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        QuickCheck >=2.8 && <3.0,
        attoparsec >=0.13.1.0 && <0.14,
        base ==4.*,
        binary >= 0.8.3.0 && <0.9,
        bytestring >=0.10.8.1 && <0.11,
        containers >=0.5.7.1 && <0.6,
        directory >=1.2 && <1.4,
        exceptions >=0.8.3 && <0.9,
        hspec >=2.2 && <2.5,
        hspec-attoparsec >=0.1.0.2 && <0.2,
        lens ==4.15.*,
        mtl >=2.2.1 && <2.3,
        ngx-cache-purge >=0.0.1 && <0.1,
        pcre-light >=0.4.0.4 && <0.5,
        protolude-lifted >=0.1.0.0 && <0.2,
        quickcheck-instances >=0.3.12 && <0.4,
        stringsearch >=0.3.6.6 && <0.4,
        unordered-containers >=0.2.7.1 && <0.3
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: test
    other-modules:
        Cache.ContentSpec
        Cache.HeaderSpec
        PurgeSpec
    ghc-options: -Wall

benchmark bench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        attoparsec >=0.13.1.0 && <0.14,
        bytestring >=0.10.8.1 && <0.11,
        criterion >=1.1.1.0 && <1.2,
        ngx-cache-purge >=0.0.1 && <0.1,
        protolude-lifted >=0.1.0.0 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: bench
    ghc-options: -Wall
